@@ -12,7 +12,8 @@ Map view:
 <br />
 (click for larger view)
 <br />
-#MAPEXIT#
+#MAPEXITFROM#
+#MAPEXITTO#
 <br />
 #MAPLORE#
 <br />
