@@ -14,6 +14,13 @@ small - this just lets others know that the file has changed if nothing
 else.  With this, include the file(s) that you changed.
 ------------------------------------------------------------------------------
 
+Add exits leading to a map. Changes tag to be coherent.
+ utils/mapper.c
+ utils/templates/map.template map_with_exit.template
+Added templates:
+ utils/templates/map_exit_to.template map_no_exit_to.template map_with_exit_to.template
+Nicolas Weeger, 2008-02-05
+
 Extract map page writing to separate function. Make names coherent.
 Delay map loading, reducing memory consumption. Use map name in exit list.
 Fix documentation.
